--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
+<!DOCTYPE html>
 <html>
    <head>
+     <meta charset="UTF-8">
+     <meta name="description" content="Tech Milestones">
+     <meta name="keywords" content="computer history,computer timeline">
+     <meta name="author" content="Zoey">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
      <body>
         <br>
       <h1 style="color:LightGrey;"><b>Tech Milestones</b></h1>
@@ -31,5 +38,4 @@
      <p><a href="https://www.computerhistory.org/timeline/"><span class= "lilGoldstar">&#9733;</span>Source<span class= "lilGoldstar">&#9733;</span></a></p>
        </div>
     </body>
-  </head>
 </html>
