--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    </head>
      <body>
         <br>
-      <h1><b>Tech Milestones</b></h1>
+      <h1 style="color:LightGrey;"><b>Tech Milestones</b></h1>
         <br>
       <h2 style="color:LightGrey;"><span class= "bigGoldstar">&#9733;</span>60's<span class= "bigGoldstar">&#9733;</span></h2>
         <div class="years">
