--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
          <br>
          <br>
        <div id="link"
-     <p><a href="https://www.computerhistory.org/timeline/"><span class= "lilGoldstar">&#9733;</span>Source<span class= "lilGoldstar">&#9733;</span></a></p>
+     <p><a href="https://www.computerhistory.org/timeline/"><span class= "lilGoldstar">&#9733;</span>Computer History Timeline<span class= "lilGoldstar">&#9733;</span></a></p>
        </div>
     </body>
 </html>
